--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Epilogue:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400..700;1,400..700&display=swap');
+
+
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
+  --background: #fcfcfc;
   --foreground: #171717;
 }
 
@@ -10,6 +14,16 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+  --font-heading: 'Epilogue', sans-serif;
+
+  --container-8xl: 1440px;
+
+  --color-primary: #72E3AD;
+  
+
+  --shadow-header: 0px 2px 4px 3px #00000008;
+  --color-border: #F1F5F9;
+  --color-azulao: #3A5BA0;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -20,7 +34,11 @@
 }
 
 body {
+  font-family: 'Cabin', sans-serif;
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+}
+
+.text-wrap-balance {
+  text-wrap: balance;
 }
