--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Epilogue:wght@100..900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400..700;1,400..700&display=swap');
-
-
 @import "tailwindcss";
 
 :root {
@@ -12,9 +8,8 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-  --font-heading: 'Epilogue', sans-serif;
+  --font-sans: var(--font-cabin-sans);
+  --font-heading: var(--font-epilogue-sans);
 
   --container-8xl: 1440px;
 
@@ -35,7 +30,6 @@
 }
 
 body {
-  font-family: 'Cabin', sans-serif;
   background: var(--background);
   color: var(--foreground);
 }
