feat: enhance layout and styling across components, add WhatsApp link generation

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,7 @@
   --color-primary: #72E3AD;
 
   --shadow-header: 0px 2px 4px 3px #00000008;
+  --shadow-button: 0px 2px 2px 4px #00000008;
   --color-border: #F1F5F9;
   --color-azulao: #3A5BA0;
   --color-azulao-hover: #2c457f;
@@ -48,6 +49,9 @@
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
   --radius-xl: calc(var(--radius) + 4px);
+
+  --color-border-dark: var(--neutral-gray);
+  --tracking-title: -3%;
 }
 
 body {
@@ -62,8 +66,8 @@ body {
 
 :root {
   --radius: 0.625rem;
-  --background: oklch(1 0 0);
-  --foreground: oklch(0.129 0.042 264.695);
+  --background: oklch(99.107% 0.00011 271.152);
+  --foreground: oklch(20.463% 0.00002 271.152);
   --card: oklch(1 0 0);
   --card-foreground: oklch(0.129 0.042 264.695);
   --popover: oklch(1 0 0);
@@ -93,6 +97,8 @@ body {
   --sidebar-accent-foreground: oklch(0.208 0.042 265.755);
   --sidebar-border: oklch(0.929 0.013 255.508);
   --sidebar-ring: oklch(0.704 0.04 256.788);
+
+  --neutral-gray: oklch(54.517% 0.00006 271.152);
 }
 
 .dark {
