fix: figma  small fixes

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,7 +15,7 @@
 
   --shadow-header: 0px 2px 4px 3px #00000008;
   --shadow-button: 0px 2px 2px 4px #00000008;
-  --color-border: #F1F5F9;
+  --color-border: var(--border);
   --color-azulao: #3A5BA0;
   --color-azulao-hover: #2c457f;
   --color-sidebar-ring: var(--sidebar-ring);
@@ -51,17 +51,18 @@
   --radius-xl: calc(var(--radius) + 4px);
 
   --color-border-dark: var(--neutral-gray);
-  --tracking-title: -3%;
+  --color-placeholder: var(--neutral-gray);
+  --tracking-title: -0.03em;
+  --leading-body: 140%;
+  --leading-small: 110%;
+
+  --breakpoint-xl: 1200px;
 }
 
 body {
   font-family: var(--font-sans);
   background: var(--background);
   color: var(--foreground);
-}
-
-.text-wrap-balance {
-  text-wrap: balance;
 }
 
 :root {
@@ -81,7 +82,7 @@ body {
   --accent: oklch(0.968 0.007 247.896);
   --accent-foreground: oklch(0.208 0.042 265.755);
   --destructive: oklch(0.577 0.245 27.325);
-  --border: oklch(0.929 0.013 255.508);
+  --border: oklch(96.826% 0.00696 248.26);
   --input: oklch(0.929 0.013 255.508);
   --ring: oklch(0.704 0.04 256.788);
   --chart-1: oklch(0.646 0.222 41.116);
@@ -142,4 +143,16 @@ body {
   body {
     @apply bg-background text-foreground;
   }
+}
+
+.text-wrap-balance {
+  text-wrap: balance;
+}
+
+.lucide {
+  stroke-width: 1;
+}
+
+.lucide.stroke-2 {
+  stroke-width: 2;
 }
