--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -159,3 +159,11 @@ body {
 [id] {
   scroll-margin-top: 5rem;
 }
+
+.gradient-mask::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: linear-gradient(to bottom, transparent 50%, white 100%);
+  pointer-events: none;
+}
