feat: complete case

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -99,7 +99,7 @@ body {
   --sidebar-border: oklch(0.929 0.013 255.508);
   --sidebar-ring: oklch(0.704 0.04 256.788);
 
-  --neutral-gray: oklch(54.517% 0.00006 271.152);
+  --neutral-gray: #707070;
 }
 
 .dark {
